New operator added: "pm" - Pct. absolute multiplier

--- a/dreamtools/examples.ipynb
+++ b/dreamtools/examples.ipynb
@@ -5843,8 +5843,8 @@
     "- \"s\": show baseline side-by-side (shock, baseline)\n",
     "- \"q\": relative multiplier (shock / baseline - 1)\n",
     "- \"pq\": pct. relative multiplier (shock / baseline - 1) * 100\n",
-    "- \"m\": absolute multiplyer (shock - baseline)\n",
-    "\n"
+    "- \"m\": absolute multiplier (shock - baseline)\n",
+    "- \"pm\": pct. absolute multiplier (shock - baseline) * 100\n"
    ]
   },
   {
@@ -9605,7 +9605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 06:59:08) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 2,
   "vscode": {
